# Parabolic

./: .SRCINFO  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Installer.iss  LICENSE  License.rtf  Nickvision.Common.targets  Nickvision.Parabolic.slnx  NickvisionTubeConverter.doap  NickvisionTubeConverter.sln  PKGBUILD  Parabolic.doap  Parabolic.sln  README.md  TubeConverter.doap  UpdateConfig.json  build.cake  build.cmake  main.cpp  meson.build  org.nickvision.tubeconverter.desktop  org.nickvision.tubeconverter.json  org.nickvision.tubeconverter.metainfo.xml
libparabolic/: CMakeLists.txt
libparabolic/include/controllers/: adddownloaddialogcontroller.h  credentialdialogcontroller.h  keyringdialogcontroller.h  mainwindowcontroller.h  preferencesviewcontroller.h
libparabolic/include/events/: downloadaddedeventargs.h  downloadcompletedeventargs.h  downloadcredentialneededeventargs.h  downloadprogresschangedeventargs.h
libparabolic/include/helpers/: pythonhelpers.h
libparabolic/include/models/: audiocodec.h  batchfile.h  batchfileentry.h  browser.h  browsers.h  cancellationtoken.h  completednotificationpreference.h  configuration.h  credentialcheckstatus.h  download.h  downloaderoptions.h  downloadhistory.h  downloadmanager.h  downloadoptions.h  downloadprogresschangedeventargs.h  downloadprogressstate.h  downloadprogressstatus.h  downloadrecoveryqueue.h  downloadstatus.h  executable.h  format.h  formatvalue.h  historicdownload.h  historylength.h  m3u.h  media.h  mediafiletype.h  mediatype.h  pathtype.h  postprocessor.h  postprocessorargument.h  postprocessorargumentcheckstatus.h  postprocessorarguments.h  previousdownloadoptions.h  quality.h  startupinformation.h  subtitleformat.h  subtitlelanguage.h  theme.h  timeframe.h  (+4 more)
libparabolic/src/: UTF8_POST_PROCESSING_FIX.md
libparabolic/src/controllers/: adddownloaddialogcontroller.cpp  credentialdialogcontroller.cpp  keyringdialogcontroller.cpp  mainwindowcontroller.cpp  preferencesviewcontroller.cpp
libparabolic/src/events/: downloadaddedeventargs.cpp  downloadcompletedeventargs.cpp  downloadcredentialneededeventargs.cpp  downloadprogresschangedeventargs.cpp
libparabolic/src/helpers/: pythonhelpers.cpp
libparabolic/src/models/: batchfile.cpp  batchfileentry.cpp  cancellationtoken.cpp  configuration.cpp  download.cpp  downloaderoptions.cpp  downloadhistory.cpp  downloadmanager.cpp  downloadoptions.cpp  downloadprogresschangedeventargs.cpp  downloadprogressstate.cpp  downloadrecoveryqueue.cpp  format.cpp  historicdownload.cpp  m3u.cpp  media.cpp  mediafiletype.cpp  postprocessorargument.cpp  postprocessorarguments.cpp  urlinfo.cpp  (+6 more)
libparabolic/tests/: downloadtests.cpp  historytests.cpp  main.cpp  urlinfotests.cpp
org.nickvision.tubeconverter.gnome/: CMakeLists.txt
org.nickvision.tubeconverter.gnome/blueprints/: add_download_dialog.blp  credential_dialog.blp  download_row.blp  keyring_page.blp  main_window.blp  preferences_dialog.blp  shortcuts_dialog.blp
org.nickvision.tubeconverter.gnome/include/: application.h
org.nickvision.tubeconverter.gnome/resources/: org.nickvision.tubeconverter.css  org.nickvision.tubeconverter.desktop.in  org.nickvision.tubeconverter.gresource.xml  org.nickvision.tubeconverter.in  org.nickvision.tubeconverter.metainfo.xml.in
org.nickvision.tubeconverter.gnome/src/: application.cpp  main.cpp
org.nickvision.tubeconverter.qt/: CMakeLists.txt  org.nickvision.tubeconverter.qt.qrc  org.nickvision.tubeconverter.qt.rc
org.nickvision.tubeconverter.qt/include/: application.h
org.nickvision.tubeconverter.qt/resources/: dark-theme.json  light-theme.json  org.nickvision.tubeconverter.qt.qrc
org.nickvision.tubeconverter.qt/src/: application.cpp  main.cpp
org.nickvision.tubeconverter.winui/: AddDownloadDialog.idl  AddDownloadDialog.xaml  AddDownloadDialog.xaml.cpp  AddDownloadDialog.xaml.h  App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  SettingsPage.idl  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  includes.h  org.nickvision.tubeconverter.winui.manifest  pch.h
org.nickvision.tubeconverter.winui/Controls/: AboutDialog.idl  AboutDialog.xaml  AboutDialog.xaml.cpp  AboutDialog.xaml.h  ClickableSettingsRow.idl  ClickableSettingsRow.xaml  ClickableSettingsRow.xaml.cpp  ClickableSettingsRow.xaml.h  DownloadRow.idl  DownloadRow.xaml  DownloadRow.xaml.cpp  DownloadRow.xaml.h  SettingsRow.idl  SettingsRow.xaml  SettingsRow.xaml.cpp  SettingsRow.xaml.h  StatusPage.idl  StatusPage.xaml  StatusPage.xaml.cpp  StatusPage.xaml.h  TitleBar.idl  TitleBar.xaml  TitleBar.xaml.cpp  TitleBar.xaml.h  ViewStack.idl  ViewStack.xaml  ViewStack.xaml.cpp  ViewStack.xaml.h  ViewStackPage.idl  ViewStackPage.xaml  ViewStackPage.xaml.cpp  ViewStackPage.xaml.h
org.nickvision.tubeconverter.winui/Helpers/: WinUI.h  WinUIHelpers.h
org.nickvision.tubeconverter.winui/Views/: AddDownloadDialog.idl  AddDownloadDialog.xaml  AddDownloadDialog.xaml.cpp  AddDownloadDialog.xaml.h  CredentialDialog.idl  CredentialDialog.xaml  CredentialDialog.xaml.cpp  CredentialDialog.xaml.h  KeyringPage.idl  KeyringPage.xaml  KeyringPage.xaml.cpp  KeyringPage.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  SettingsPage.idl  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h
po/: CREDITS.json  LINGUAS  POTFILES  ar.po  es.po  fr.po  hr.po  it.po  meson.build  nl.po  ru.po  tr.po
src/: main.cpp  meson.build
src/controllers/: adddownloaddialogcontroller.cpp  adddownloaddialogcontroller.hpp  mainwindowcontroller.cpp  mainwindowcontroller.hpp  preferencesdialogcontroller.cpp  preferencesdialogcontroller.hpp
src/helpers/: cmdhelpers.cpp  cmdhelpers.hpp  stringhelpers.cpp  stringhelpers.hpp  translation.cpp  translation.hpp
src/models/: appinfo.cpp  appinfo.hpp  configuration.cpp  configuration.hpp  download.cpp  download.hpp  mediafiletype.cpp  mediafiletype.hpp
src/ui/: application.cpp  application.hpp
(+1807 files in other folders)
